# tclllama

./: .gitattributes  .gitignore  API.md  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  INDEX.md  LICENSE  Makefile.in  README.md  SECURITY.md  autoconf  configure  configure.ac  pkgIndex.tcl.in  preparar_tea.tcl
generic/: sha256.c  tclllama.c
